cluster/config/load-balancer-demo/load-balancer-demo-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: load-balancer-demo
  labels:
    pod-security.kubernetes.io/enforce: privileged
    goldilocks.fairwinds.com/enabled: "true"
