cluster/config/load-balancer-demo/load-balancer-demo-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lb-demo
  namespace: load-balancer-demo
spec:
  replicas: 7
  selector:
    matchLabels:
      app: lb-demo
  template:
    metadata:
      labels:
        app: lb-demo
    spec:
      containers:
      - env:
        - name: COW_COLOR
          value: purple
        image: bashofmann/rancher-demo:1.1.0
        name: lb-demo
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
