cluster/config/load-balancer-demo/load-balancer-demo.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    istio-injection: enabled
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "strict-mtls"
  namespace: default
spec:
  mtls:
    mode: STRICT
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lb-demo
  namespace: default
spec:
  replicas: 4
  selector:
    matchLabels:
      app: lb-demo
  template:
    metadata:
      labels:
        app: lb-demo
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        - name: COW_COLOR
          value: purple
        image: bashofmann/rancher-demo:1.1.0
        name: lb-demo
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: lb-demo
  namespace: default
  labels:
    app: lb-demo
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: lb-demo
