cluster/config/load-balancer-demo/load-balancer-demo-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: load-balancer-demo
  namespace: load-balancer-demo
spec:
  hosts:
  - "lb-demo.kube.home"
  gateways:
  - istio-system/main-gateway
  http:
  - route:
    - destination:
        host: lb-demo
        port:
          number: 80
